--- a/数据结构和算法.md
+++ b/数据结构和算法.md
@@ -9209,8 +9209,7 @@ class MyBst:
 
 并查集是一种树型的数据结构，用于处理一些不相交集合的合并及查询问题（即所谓的并、查）。比如说，我们可以用并查集来判断一个森林中有几棵树、某个节点是否属于某棵树等。
 
-并查集主要由一个整型数组 pre和两个函数 find( )、join( ) 构成。
-数组 pre 记录了每个点的前驱节点是谁，函数 find(x) 用于查找指定节点 x 属于哪个集合，函数 join(x,y) 用于合并两个节点 x 和 y 。
+并查集主要由一个整型数组 pre和两个函数 find( )、join( ) 构成。数组 pre 记录了每个点的前驱节点是谁，函数 find(x) 用于查找指定节点 x 属于哪个集合，函数 join(x,y) 用于合并两个节点 x 和 y 。
 
 find函数的实现
 
@@ -10779,6 +10778,190 @@ def shortestPathAllKeys(grid: List[str]) -> int:
 	return -1
 
 ```
+
+
+### 太平洋大西洋水流问题
+
+[417. 太平洋大西洋水流问题 - 力扣（LeetCode）](https://leetcode.cn/problems/pacific-atlantic-water-flow/description/)
+
+一个 $m\times n$ 大小的矩形岛屿，与太平洋和大西洋相邻，当岛屿一部分的高度大于等于另一部分，水就能流过去，求哪些位置的水能够流到两个大洋。
+
+这里采用逆向求解，即水往高处流，从边界向上找，分别找到能流到两个大洋中的部分，再取相同的部分即可，这里用集合收集岛屿中的点，方便求相同部分
+
+```python
+def pacificAtlantic(self, heights) -> List[List[int]]:
+	m = len(heights)
+	n = len(heights[0])
+	dirs = [[-1, 0], [1, 0], [0, 1], [0, -1]]
+	pacificIslands = set()
+	atlanticIslands = set()
+	def dfs(i, j, islands):  # islands 既是结果又避免重复访问
+		if (i, j) in islands:
+			return
+		islands.add((i, j))
+		for di, dj in dirs:
+			ni, nj = i + di, j + dj
+			if 0 <= ni < m and 0 <= nj < n:
+				if heights[ni][nj] >= heights[i][j]:
+					dfs(ni, nj, islands)
+	
+	for i in range(m):
+		dfs(i, 0, pacificIslands)
+	for j in range(n):
+		dfs(0, j, pacificIslands)
+	
+	for i in range(m):
+		dfs(i, n-1, atlanticIslands)
+	for j in range(n):
+		dfs(m-1, j, atlanticIslands)
+
+	return list(map(list, pacificIslands & atlanticIslands))
+```
+
+
+### 找到小镇的法官
+
+[997. 找到小镇的法官 - 力扣（LeetCode）](https://leetcode.cn/problems/find-the-town-judge/description/)
+
+该问题可以使用矩阵问题中的名人问题的解法求解，但是有一种更加简单的求法，即统计各个顶点的入度和出度，法官的入度为n-1，出度为0
+
+```python
+def findJudge(n: int, trust) -> int:
+	in_degrees = Counter(y for _, y in trust)
+	ou_degrees = Counter(x for x, _ in trust)
+
+	for i in range(1, n+1):
+		if in_degrees[i] == n - 1 and ou_degrees[i] == 0:
+			return i
+	return -1 
+```
+
+
+### 可以到达所有点的最少点数目
+
+[1557. 可以到达所有点的最少点数目 - 力扣（LeetCode）](https://leetcode.cn/problems/minimum-number-of-vertices-to-reach-all-nodes/description/)
+
+该问题直接通过求出所有入度为 0 的点即可，入度为0的点的集合即为到达所有点的最少点集合。
+
+
+### 判断二分图
+
+[785. 判断二分图 - 力扣（LeetCode）](https://leetcode.cn/problems/is-graph-bipartite/)
+
+用染色法判断，首先随便选一个点 `i` 进行染色，然后对于邻接节点，如果未染色，将其邻接节点染成另一个颜色，如果染了和点 `i` 相同的颜色，就证明这个图不是二分图。具体可以用DFS 或者 BFS进行遍历
+
+```python
+def isBipartite(graph: List[List[int]]) -> bool:
+	n = len(graph)
+	colors = [-1 for i in range(n)]
+	valid = [True]
+	def dfs(i, c):
+		colors[i] = c
+		for j in graph[i]:
+			if colors[j] == -1:
+				dfs(j, 1-c)
+				if not valid[0]:
+					return
+			elif colors[j] == c:
+				valid[0] = False
+				return
+	for i in range(n):
+		if colors[i] == -1:
+			dfs(i, 0)
+			if not valid[0]:
+				break
+	return valid[0]
+```
+
+
+### 账户合并
+
+[721. 账户合并 - 力扣（LeetCode）](https://leetcode.cn/problems/accounts-merge/description/)
+
+该问题可以通过DFS算法解决，对每个账户进行编号，每个账户编号对应若干个邮箱，相当于与若干个邮箱相连，然后对每个账户进行DFS，则相连的邮箱属于同个用户
+
+```python
+
+def accountsMerge(accounts: List[List[str]]) -> List[List[str]]:
+	email_to_idx = defaultdict(list)  # 邮箱对应账户
+	for i, account in enumerate(accounts):
+		for email in account[1:]:
+			email_to_idx[email].append(i)
+
+	def dfs(i: int) -> None:
+		vis[i] = True
+		for email in accounts[i][1:]:  # 遍历 i 的所有邮箱地址
+			if email in email_set:
+				continue
+			email_set.add(email)
+			for j in email_to_idx[email]:  
+			# 遍历所有包含该邮箱地址的账户下标 j
+				if not vis[j]:  # j 没有访问过
+					dfs(j)
+
+	ans = []
+	vis = [False] * len(accounts)
+	for i, b in enumerate(vis):
+		if not b:  # i 没有访问过
+			email_set = set()  # 用于收集 DFS 中访问到的邮箱地址
+			dfs(i)
+			ans.append([accounts[i][0]] + sorted(email_set))
+	return ans
+```
+
+
+下面介绍一个基于并查集的算法
+
+```python
+class UnionFind:
+    def __init__(self, n):
+        self.parent = list(range(n))
+    
+    def union(self, idx1, idx2): 
+        self.parent[self.find(idx2)] = self.find(idx1)
+    
+    def find(self, idx):  # 路径压缩
+        if self.parent[idx] != idx:
+            self.parent[idx] = self.find(self.parent[idx])
+        return self.parent[idx]
+    
+def accountsMerge(accounts: List[List[str]]) -> List[List[str]]:
+	emailToIndex = {}
+	emailToName = {}
+	# 记录每个邮箱的编号和对应的名称
+	for account in accounts:
+		name = account[0]
+		for email in account[1:]:
+			if email not in emailToIndex:
+				emailToIndex[email] = len(emailToIndex)
+				emailToName[email] = name
+	# 同一个账户中的邮箱地址一定属于同一个人
+	# 因此遍历每个账户，对账户中的邮箱地址进行合并
+	uf = UnionFind(len(emailToIndex))
+	for account in accounts:
+		fi = emailToIndex[account[1]]
+		for email in account[2:]:
+			uf.union(fi, emailToIndex[email])
+	
+	# 遍历邮箱地址，通过并查集得到该邮箱地址属于哪个合并后的账户
+	indexToEmails = defaultdict(list)
+	for email, index in emailToIndex.items():
+		index = uf.find(index)
+		indexToEmails[index].append(email)
+		
+	ans = []
+	for emails in indexToEmails.values():
+		ans.append([emailToName[emails[0]]] + sorted(emails))
+	return ans
+```
+
+
+### 等式方程的可满足性
+
+[990. 等式方程的可满足性 - 力扣（LeetCode）](https://leetcode.cn/problems/satisfiability-of-equality-equations/description/)
+
+用并查集做，将所有相等的方程的元素合并到一起，再遍历所有不等的方程，如果两个不等元素有相同的父节点，证明不满足
+
 
 
 ## 贪心算法
