--- a/数据结构和算法.md
+++ b/数据结构和算法.md
@@ -4553,13 +4553,126 @@ def solve(s1, s2):
 
 [Find if an array of strings can be chained to form a circle | Set 2 - GeeksforGeeks](https://www.geeksforgeeks.org/find-array-strings-can-chained-form-circle-set-2/)
 
+将字符串的开始和结尾看成一条有向边的起点和终点，构建邻接矩阵和出度，入度。如果能被串联，那么需要满足两个条件
+
++ 所有顶点的入度和出度相等
++ 从一个顶点出发能遍历到所有的顶点（用一个DFS遍历一个顶点，看是否所有的顶点都能被遍历到）
+
+```python
+def isCircle(arr):
+	ch2idx = {}
+	nc = 0
+	for w in arr:
+		if w[0] not in ch2idx:
+			ch2idx[w[0]] = nc
+			nc += 1
+		if w[-1] not in ch2idx:
+			ch2idx[w[-1]] = nc
+			nc += 1
+	
+	adj = [[] for i in range(nc)]
+	indeg = [0] * nc
+	oudeg = [0] * nc
+	
+	for w in arr:
+		adj[ch2idx[w[0]]].append(ch2idx[w[-1]])
+		indeg[ch2idx[w[-1]]] += 1
+		oudeg[ch2idx[w[0]]] += 1
+	
+	# 入度和出度一致
+	for i in range(nc):
+		if indeg[i] != oudeg[i]:
+			return 0
+	
+	visited = [False] * nc
+	
+	def dfs(i):
+		visited[i] = True
+		
+		for j in adj[i]:
+			if not visited[j]:
+				dfs(j)
+	
+	dfs(0)  # 从0开始遍历，看是否能遍历所有的节点
+	
+	# 遍历所有的顶点，是否还有没有访问过的
+	for i in range(nc):
+		if not visited[i]:
+			return 0
+	return 1
+```
 
 ### 外星人字典
 
 [Alien Dictionary - GeeksforGeeks](https://www.geeksforgeeks.org/given-sorted-dictionary-find-precedence-characters/)
 
-根据排序顺序，找到字符顺序
+给定一组字符串，字符串的排序顺序按照外星人字典排列，找到字符的顺序
 
+问题的关键是如何根据排序的字符串找到对应的字符之间的顺序，一种方法是枚举字符串，比较字符串之间的差距，如果字符不同，那么就可以得到字符之间的顺序
+
+```python
+def findOrder(words):
+	from collections import deque
+	n = len(words)
+	
+	# 字符和索引之间的映射
+	ch2idx = {}
+	idx2ch = {}
+	idx = 0
+	for w in words:
+		for c in list(w):
+			if c not in ch2idx:
+				ch2idx[c] = idx
+				idx2ch[idx] = c
+				idx += 1
+	nw = len(ch2idx)  # 字符的数量
+	adj = [[] for _ in range(nw)]
+	indeg = [0] * nw
+	
+	# 获得字符之间的顺序，有三种情况
+	# 1. 两个单词之间存在不同的字符，直接返回即可
+	# 2. 两个单词前面的部分相同，但是前面的单词长度更长，显然是错误的
+	# 3. 两个单词前面的部分相同，但是前面的单词长度更短，这是合理的
+	def get_order(s1, s2):
+		n = min(len(s1), len(s2))
+		for i in range(n):
+			if s1[i] != s2[i]:
+				return (ch2idx[s1[i]], ch2idx[s2[i]])
+		if len(s1) > len(s2):  # 前面的单词更长，错误
+			return False
+		else:
+			return None
+	# 防止重复获取字符顺序
+	collected_order = set()
+	for i in range(n):
+		for j in range(i+1, n):
+			order = get_order(words[i], words[j])
+			if order is not None:
+				if order == False:
+					return ""
+				if order not in collected_order:
+					adj[order[0]].append(order[1])
+					indeg[order[1]] += 1
+					collected_order.add(order)
+	# 拓扑排序
+	queue = deque()
+	for c in range(nw):
+		if indeg[c] == 0:
+			queue.append(c)
+
+	res = []
+	while queue:
+		i = queue.popleft()
+		res.append(idx2ch[i])
+		for j in adj[i]:
+			indeg[j] -= 1
+			if indeg[j] == 0:
+				queue.append(j)
+	if len(res) != nw:  # 不存在拓扑排序
+		return ""
+	else:
+		return "".join(res)
+```
 
 ### 最小词表分解次数
 
@@ -4598,18 +4711,17 @@ def solve(s, d):
 ```python
 def min_word_break(s, dict):
     n = len(s)
-    dp = [float('inf')] * (n + 1)  # Initialize a list to store minimum word breaks needed
-    dp[0] = 0  # No breaks needed for an empty string
+    dp = [float('inf')] * (n + 1)  
+    dp[0] = 0  # 空字符串无需分解
 
     for i in range(1, n + 1):
         for word in dict:
             length = len(word)
             if i >= length and s[i - length:i] == word:
-                # Check if the substring from i-length to i matches a word in the dictionary
+                # 检查 s[i - length:i] 是否和单词相等，如果相等更新
                 dp[i] = min(dp[i], dp[i - length] + 1)
-                # Update the minimum word breaks needed at position i
 
-    return dp[n] - 1  # Return the minimum word breaks needed for the entire string
+    return dp[n] - 1  # 减1是因为最后的空字符串无需被分解
 ```
 
 
@@ -4722,20 +4834,20 @@ if cnt[word[-1]] < cnt[word[0]]:
 [Minimum number of bracket reversals needed to make an expression balanced - GeeksforGeeks](https://www.geeksforgeeks.org/minimum-number-of-bracket-reversals-needed-to-make-an-expression-balanced/)
 首先需要保证括号数量为偶数。
 
-一种递归的方法是，对于字符串中的每个 `{` 都进行翻转，如果是 `{` 就转成 `}`，反之转成 `{`，再判断翻转后的字符串是否平衡。
+一种递归的方法是，对于字符串中的每个括号采取翻转或者不翻转，翻转指如果是 `{` 就转成 `}`，反之转成 `{`。这样会枚举出所有可能的括号排列方式，再从这些方式中找到平衡的括号
 
 ```python
 def recur(expr, n, ind, change, ans):
-    # When we've covered the whole string, check if it's balanced
+    # 停止条件
     if ind == n:
-        if isBalanced(expr):
+        if isBalanced(expr):  # isBalanced 判断括号是否平衡，可以用栈来判断
             ans[0] = min(ans[0], change)   # ans 是一个列表，方便保存结果
         return
 
-    # Keep the bracket as it is
+    # 保持括号
     recur(expr, n, ind + 1, change, ans)
 
-    # Reverse the bracket
+    # 翻转括号
     if expr[ind] == '{':
         expr = expr[:ind] + '}' + expr[ind + 1:]
     else:
@@ -4751,18 +4863,14 @@ def countMinReversals(expr):
 
     lenn = len(expr)
 
-    # length of expression must be even
-    # to make it balanced by using reversals.
+    # 字符串的长度需要能被2整除
     if (lenn % 2):
         return -1
 
-    # After this loop, stack contains
-    # unbalanced part of expression,
-    # i.e., expression of the form "...."
+    # 删除所有平衡的括号，留下不平衡的括号
     s = []
     for i in range(lenn):
         if (expr[i] == '}' and len(s)):
-
             if (s[0] == '{'):
                 s.pop(0)
             else:
@@ -4770,20 +4878,17 @@ def countMinReversals(expr):
         else:
             s.insert(0, expr[i])
 
-    # Length of the reduced expression
+    # 不平衡括号的长度 red_len
     # red_len = (m+n)
     red_len = len(s)
 
-    # count opening brackets at the
-    # end of stack
+    # 计算栈底的开括号的数量
     n = 0
-    while (len(s)and s[0] == '{'):
+    while len(s) and s[0] == '{':
         s.pop(0)
         n += 1
-
-    # return ceil(m/2) + ceil(n/2) which
-    # is actually equal to (m+n)/2 + n%2
-    # when m+n is even.
+	
+    # 当 m+n 为偶数时 ceil(m/2) + ceil(n/2) 和 (m+n)/2 + n%2 等价
     return (red_len // 2 + n % 2)
 ```
 
@@ -4832,36 +4937,34 @@ def solve_m(arr, k):
 import sys
  
 def calculateCost(curr, n, arr, k):
-    # Base case: If current index is beyond or at the last word, no cost
+    # 停止条件
     if curr >= n:
         return 0
 
-    # Keeps track of the current line's total character count
+    # 计算当前行的字符数
     sum = 0
 
-    # Initialize with a large value to find the minimum cost
     ans = sys.maxsize
 
-    # Try placing words from the current position to the next
+    # 尝试在当前行放置单词
     for i in range(curr, n):
       
-        # Add the length of the current word
+        # 加上当前单词的长度
         sum += arr[i]
 
-        # Including spaces between words
+        # 加上单词间的空格
         tot = sum + (i - curr)
 
-        # If the total exceeds the line width, break out of the loop
+        # 如果长度超过了行宽，停止循环
         if tot > k:
             break
 
-        # If this is not the last word in the array, compute the 
-        # cost for the next line
+        # 如果不是最后一个单词，计算下一行的损失
         if i != n - 1:
             temp = (k - tot) * (k - tot) + calculateCost(i + 1, n, arr, k)
             ans = min(ans, temp)
             
-        # If it's the last word, there's no cost added
+        # 如果是最后一个单词，没有损失了
         else:
             ans = 0
     return ans
@@ -5098,18 +5201,17 @@ def permuteUnique(nums):
 
 ```python
 def reverse_queue(queue: Queue):
-    # Base case
     if queue.empty():
         return
  
-    # Dequeue current item (from front)
+    # 元素出队列
     item = queue.queue[0]
     queue.get()
  
-    # Reverse remaining queue
+    # 翻转剩余队列
     reverse_queue(queue)
  
-    # Enqueue current item (to rear)
+    # 元素入队列
     queue.put(item)
 ```
 
@@ -5124,8 +5226,7 @@ def reverse_queue(queue: Queue):
 ```python
 def countRecur(coins, n, sum):
   
-    # If sum is 0 then there is 1 solution
-    # (do not include any coin)
+    # 如果和为0，那么有一种方案（不选择硬币）
     if sum == 0:
         return 1
 
@@ -5133,8 +5234,7 @@ def countRecur(coins, n, sum):
     if sum < 0 or n == 0:
         return 0
 
-    # count is sum of solutions (i)
-    # including coins[n-1] (ii) excluding coins[n-1]
+    # 分成是否选择该硬币两种情况
     return countRecur(coins, n, sum - coins[n - 1]) + \
               countRecur(coins, n - 1, sum)
 
@@ -5194,8 +5294,35 @@ def longestPalindromic(strn, l, r, count):
 
 ### 二叉树的底部视图
 
-
 [Bottom View of a Binary Tree - GeeksforGeeks](https://www.geeksforgeeks.org/bottom-view-binary-tree/)
+
+二叉树的底部视图指从底部向上看能看到的节点，这里需要考虑每个节点的水平位置，水平位置相等并且处于同一层的选择层次遍历时后遍历到的节点
+
+
+使用层次遍历，遍历时记住每个节点对应的水平位置，即左子树是根节点的水平位置减1，右子树则是加1。
+
+```python
+def bottomView(root):
+	from collections import deque, defaultdict
+	queue = deque()
+	# 根节点的水平位置为0
+	queue.append((root, 0))
+	
+	hd_map = defaultdict(int)        
+	while queue:
+		node, hd = queue.popleft()
+		
+		# 更新hd对应的值
+		hd_map[hd] = node.data
+		
+		if node.left is not None:
+			queue.append((node.left, hd-1))
+		if node.right is not None:
+			queue.append((node.right, hd+1))
+	
+	res = [hd_map[hd] for hd in sorted(hd_map)]
+	return res
+```
 
 
 ### 生成数组的全部子集
@@ -5559,11 +5686,11 @@ $$
 具体实现如下
 
 ```python
-mat = [[0 for i in range(3)] for j in range(3)] # Initializing a 3x3 matrix
-res = [[0 for i in range(3)] for j in range(3)] # Initializing a 3x3 matrix
+mat = [[0 for i in range(3)] for j in range(3)]
+res = [[0 for i in range(3)] for j in range(3)]
 
 def mul(self, res, mat, m):
-	res1 = [[0 for i in range(3)] for j in range(3)] # Initializing a 3x3 matrix
+	res1 = [[0 for i in range(3)] for j in range(3)]
 	for i in range(3):
 		for j in range(3):
 			for k in range(3):
@@ -5602,7 +5729,6 @@ def mat_exp(self, n, m):
 如果 `matrix[x,y]<target`，由于每一行的元素都是升序排列的，那么在当前的搜索矩阵中，所有位于第 x 行的元素都是严格小于 target 的，因此我们可以将它们全部忽略，即将 x 增加 1。
 
 在搜索中如果超出矩阵边界，就证明不存在target
-
 
 
 
@@ -5797,13 +5923,12 @@ def countOperations(a, b):
     n = len(a)
     m = len(a[0])
 
-    # Create difference matrix (a = a - b)
+    # 创建差异矩阵
     for i in range(n):
         for j in range(m):
             a[i][j] -= b[i][j]
 
-    # Check if transformation is possible using the property
-    # a[i][j] - a[i][0] - a[0][j] + a[0][0] should be 0
+    # 如果 a[i][j] - a[i][0] - a[0][j] + a[0][0] 为0，那么可以转换
     for i in range(1, n):
         for j in range(1, m):
             if a[i][j] - a[i][0] - a[0][j] + a[0][0] != 0:
@@ -5811,12 +5936,11 @@ def countOperations(a, b):
 
     result = 0
 
-    # Add operations needed for first column
+    # 第一列需要的加操作
     for i in range(n):
         result += abs(a[i][0])
 
-    # Add operations needed for
-    # first row (excluding a[0][0])
+    # 第一行（除了 a[0][0]） 需要的加操作
     for j in range(m):
         result += abs(a[0][j] - a[0][0])
 
@@ -6161,7 +6285,7 @@ def solve_bfs(mat, x, y):
 
 [Maximum sum rectangle in a 2D matrix | DP-27 - GeeksforGeeks](https://www.geeksforgeeks.org/maximum-sum-rectangle-in-a-2d-matrix-dp-27/)
 
-只讨论时间复杂度最低的第三种算法，由于需要求的是矩形，所以可以先确定左右边界，然后对左右边界之间的元素按行求和得到一维数组，然后使用kadane算法求最大和
+只讨论时间复杂度最低的第三种算法，由于需要求的是矩形，所以可以先遍历确定左右边界，然后对左右边界之间的元素按行求和得到一维数组，然后使用kadane算法求最大和
 
 ```python
 def kadaneAlgorithm(temp):
@@ -6170,15 +6294,14 @@ def kadaneAlgorithm(temp):
     currSum = 0
     maxSum = float('-inf')
 
-    # Traverse the array
     for i in range(rows):
         currSum += temp[i]
 
-        # Update maxSum if the current sum is greater
+        # 如果当前和更大，更新最大和
         if maxSum < currSum:
             maxSum = currSum
 
-        # If the current sum becomes negative, reset it to 0
+        # 当前和小于0，将其置为0
         if currSum < 0:
             currSum = 0
 
@@ -6191,27 +6314,20 @@ def maxSumRectangle(mat):
 
     maxSum = float('-inf')
 
-    # Initialize a temporary array to store row-wise
-    # sums between left and right boundaries
-    temp = [0] * rows
-
-    # Check for all possible left and right boundaries
+    # 遍历左右边界
     for left in range(cols):
-        # Reset the temporary array for each new left
-        # boundary
+        # 重置临时数组
         temp = [0] * rows
 
         for right in range(left, cols):
-            # Update the temporary array with the current
-            # column's values
+            # 用当前列的元素更新当前行的和
             for row in range(rows):
                 temp[row] += mat[row][right]
 
-            # Find the maximum sum of the subarray for the
-            # current column boundaries
+            # 找到当前列边界之间的最大和
             sumValue = kadaneAlgorithm(temp)
 
-            # Update the maximum sum found so far
+            # 更新全局最大值
             maxSum = max(maxSum, sumValue)
 
     return maxSum
@@ -6310,7 +6426,6 @@ class MyStack:
         for i in range(n):
             self.queue.append(self.queue.popleft())
         
-    
     def empty(self):
         return len(self.queue) == 0
 
@@ -6438,14 +6553,15 @@ def solve(s):
 ```python
 class MinStack:
     def __init__(self):
-        self.stack1 = []
-        self.stack2 = []
+        self.stack1 = []  # 普通栈
+        self.stack2 = []  # 最小栈
 
     def push(self, x):
         self.stack1.append(x)
         if len(self.stack2) == 0:
             self.stack2.append(x)
         else:
+        # 如果当前值小于最小栈的栈顶元素，入栈
             if x <= self.stack2[-1]:
                 self.stack2.append(x)
     
@@ -6462,7 +6578,7 @@ class MinStack:
         if self.empty():
             return None
         v = self.stack1.pop()
-        if v == self.getMin():
+        if v == self.getMin(): # 弹出最小元素，最小栈也需要出栈
             self.stack2.pop()
         return v
 ```
@@ -6717,7 +6833,6 @@ def bfs(adj, node): # 从顶点node开始遍历
 
 ```python
 def nodeLevel(V, adj, X):
-	# code here
 	queue = deque()
 	if X == 0:
 		return 0
@@ -6836,42 +6951,6 @@ while queue:
 return -1
 ```
 
-
-#### 判断二分图
-
-[Check whether a given graph is Bipartite or not - GeeksforGeeks](https://www.geeksforgeeks.org/bipartite-graph/)
-
-二分图指用两种颜色对图节点进行染色，保证相邻节点的颜色不一样
-
-```python
-def solve(V, adj):
-    n = len(adj)
-    queue = deque()
-
-    queue.append((0, 0))
-    visited = [False] * n
-    colors = [-1] * n
-    colors[0] = 0
-    while queue:
-        curr, color = queue.popleft()
-        visited[curr] = True
-        for neigh in adj[curr]:
-            if not visited[neigh]:
-                visited[neigh] = True
-                if color == 0:
-                    colors[neigh] = 1
-                    queue.append((neigh, 1))
-                else:
-                    colors[neigh] = 0
-                    queue.append((neigh, 0))
-            else:
-                if colors[neigh] == color:
-                    return False
-    return True
-```
-
-
-
 ### DFS
 
 [Depth First Search or DFS for a Graph - GeeksforGeeks](https://www.geeksforgeeks.org/depth-first-search-or-dfs-for-a-graph/)
@@ -6906,6 +6985,73 @@ def dfs(start: int, end: int, visited: List[bool], V: int) -> bool:
             if dfs(x, end, visited, V):
                 return True
     return False
+```
+
+
+### 课程表
+
+[207. 课程表 - 力扣（LeetCode）](https://leetcode.cn/problems/course-schedule/description/)
+
+在完成一些课程之前需要前置课程，给定课程和前置课程，求是否能学完所有的课程
+
+可以使用DFS来解决该问题，不过需要注意的是，为了防止出现环，需要加入一个栈递归判断，如果出现了环，证明不可能学完所有的课程
+
+```python
+def canFinish(numCourses: int, prerequisites: List[List[int]]) -> bool:
+	visited = [False for _ in range(numCourses)]
+	rec_stack = [False for _ in range(numCourses)]
+
+	adj = [[] for _ in range(numCourses)]
+
+	for pre in prerequisites:
+		adj[pre[1]].append(pre[0])  # 先学习pre[1]，再学习pre[0]
+	
+	def dfs(i):
+		# 如果i已经在栈中，证明存在环，不可能学完所有的课程
+		if rec_stack[i]:
+			return True
+		visited[i] = True
+		rec_stack[i] = True
+		for j in adj[i]:
+			# 如果 j 未访问，但是存在环
+			if not visited[j] and dfs(j):
+				return True
+			elif rec_stack[j]: # 如果i已经在栈中，证明存在环，不可能学完所有的课程
+				return True
+		rec_stack[i] = False
+		return False
+
+	for i in range(numCourses):
+		if not visited[i] and dfs(i):
+			return False
+	return True
+```
+
+
+另一种方法是使用BFS，最开始能学的课程一定是没有前置课程的，即入度为0，将入度为0的节点全部放入队列中，取出一个节点时，删除该节点相关的所有出度，如果有节点的入度变为0，再将其加入队列，如果最后所有课程都能学习，即加入过队列的节点数量等于整个图的节点数量
+
+```python
+def canFinish(numCourses: int, prerequisites: List[List[int]]) -> bool:
+	in_degrees = [0 for _ in range(numCourses)]
+	adj = [[] for _ in range(numCourses)]
+	for pre in prerequisites:
+		in_degrees[pre[0]] += 1
+		adj[pre[1]].append(pre[0])
+	
+	queue = deque()
+	# 入度为0的节点入队列
+	for i in range(numCourses):
+		if in_degrees[i] == 0:
+			queue.append(i)
+	visited = 0
+	while queue:
+		node = queue.popleft()
+		visited += 1
+		for j in adj[node]:
+			in_degrees[j] -= 1
+			if in_degrees[j] == 0:  # 如果入度变为0，加入队列
+				queue.append(j)
+	return visited == numCourses
 ```
 
 
@@ -6992,7 +7138,7 @@ def solve(grid):
     return cnt
 ```
 
-也可以使用BFS，只需要修改 `_solve` 函数中的内容即可，但是似乎会超时
+也可以使用BFS，只需要修改 `_solve` 函数即可
 
 ```python
 # BFS 的搜索过程
@@ -7008,6 +7154,7 @@ def _solve(grid, x, y):
 			ny = y + dir2[i]
 
 			if isSafe(nx, ny) and grid[nx][ny] == '1' and not visited[nx][ny]:
+				visited[nx][ny] = True
 				queue.append((nx, ny))
 ```
 
@@ -7039,79 +7186,57 @@ while n > 0:
 
 [Maximum cost path from source node to destination node via at most K intermediate nodes - GeeksforGeeks](https://www.geeksforgeeks.org/maximum-cost-path-from-source-node-to-destination-node-via-at-most-k-intermediate-nodes/)
 
+通过层次遍历保证至多k个中间点
+
 ```python
-# Python3 program for the above approach
 from collections import deque
 
-# Function to find the longest distance
-# from source to destination with at
-# most K intermediate nodes
 def findShortestPath(n, edges, src, dst, K):
-    
-    # Initialize the adjacency list
+
     adjlist = [[] for i in range(n)]
-    
-    # Initialize a queue to perform BFS
+
     q = deque()
 
-    mp = {}
-
-    # Store the maximum distance of
-    # every node from source vertex
-    ans = -10**9
-
-    # Initialize adjacency list
+    mp = {}  # 记录到达每个顶点的最大cost
+	
+    ans = -10**9 # 最终结果
+    
+	# edge：起点，终点，cost
     for i in range(len(edges)):
         edge = edges[i]
-        adjlist[edge[0]].append([edge[1], 
-                                 edge[2]])
+        adjlist[edge[0]].append([edge[1], edge[2]])
 
-    # Push the first element into queue
+    # 将第一个元素塞入队列中
     q.append([src, 0])
 
     level = 0
 
-    # Iterate until the queue becomes empty
-    # and the number of nodes between src
-    # and dst vertex is at most to K
+    # 层次遍历，如果队列为空，或者源到终点的节点数达到 K
     while (len(q) > 0 and level < K + 2):
 
-        # Current size of the queue
         sz = len(q)
 
         for i in range(sz):
             
-            # Extract the front
-            # element of the queue
+            # 弹出最前面的元素
             pr = q.popleft()
-            
-            # Pop the front element
-            # of the queue
-            # q.pop()
-
-            # If the dst vertex is reached
+	        
+            # 到达终点
             if (pr[0] == dst):
                 ans = max(ans, pr[1])
 
-            # Traverse the adjacent nodes
+            # 遍历邻接节点
             for pr2 in adjlist[pr[0]]:
-                
-                # If the distance is greater
-                # than the current distance
-                if ((pr2[0] not in mp) or 
-                  mp[pr2[0]] > pr[1] + pr2[1]):
-                      
-                    # Push it into the queue
+                # 如果当前点未遍历，或者当前cost大于历史cost
+                if ((pr2[0] not in mp) or mp[pr2[0]] < pr[1] + pr2[1]):
+                    
+                    # 塞入队列
                     q.append([pr2[0], pr[1] + pr2[1]])
                     mp[pr2[0]] = pr[1] + pr2[1]
-
-        # Increment the level by 1
         level += 1
 
-    # Finally, return the maximum distance
     return ans if ans != -10**9 else -1
 
-# Driver Code
 if __name__ == '__main__':
     
     n, src, dst, k = 3, 0, 2, 1
@@ -7121,8 +7246,6 @@ if __name__ == '__main__':
              [ 0, 2, 500 ] ]
 
     print(findShortestPath(n, edges,src, dst, k))
-
-# This code is contributed by mohit kumar 29
 ```
 
 
@@ -10961,7 +11084,209 @@ def accountsMerge(accounts: List[List[str]]) -> List[List[str]]:
 [990. 等式方程的可满足性 - 力扣（LeetCode）](https://leetcode.cn/problems/satisfiability-of-equality-equations/description/)
 
 用并查集做，将所有相等的方程的元素合并到一起，再遍历所有不等的方程，如果两个不等元素有相同的父节点，证明不满足
+ke
 
+### 按字典序排列最小的等效字符串
+
+[1061. 按字典序排列最小的等效字符串 - 力扣（LeetCode）](https://leetcode.cn/problems/lexicographically-smallest-equivalent-string/description/)
+
+该问题使用并查集，将等价的字符放在一起，但是需要注意的是在合并时，需要将字典序较小的字符作为代表
+
+```python
+class UnionFind:
+    def __init__(self, n):
+        self.parent = [i for i in range(n)]
+    
+    def find(self, idx):
+        if self.parent[idx] != idx:
+            self.parent[idx] = self.find(self.parent[idx])
+        return self.parent[idx]
+
+    def union(self, idx1, idx2):
+        px1 = self.find(idx1)
+        px2 = self.find(idx2)
+        if px1 < px2:  # 令字典序较小的作为代表
+            self.parent[px2] = px1
+        else:
+            self.parent[px1] = px2
+    
+
+class Solution:
+    def smallestEquivalentString(self, s1: str, s2: str, baseStr: str) -> str:
+        n = len(s1)
+        
+        uf = UnionFind(26)  # 26 个字符
+        for i in range(n):
+            uf.union(ord(s1[i])-97, ord(s2[i])-97)
+
+        low_order_str = ""
+        for i in range(len(baseStr)):
+            idx = uf.find(ord(baseStr[i]) - 97)
+            low_order_str += chr(idx+97)
+           
+        return low_order_str
+```
+
+
+### 有向图中最大颜色值
+
+[1857. 有向图中最大颜色值 - 力扣（LeetCode）](https://leetcode.cn/problems/largest-color-value-in-a-directed-graph/description/)
+
+给定有向图，图中每个节点都被染色，一共26种颜色，求一条路径中最多的颜色数量，如果存在环，返回-1
+
+用BFS，先将所有入度为0的点（起点）塞入队列，设置一个二维数组记录在每个节点各种颜色的数量，然后搜索
+
+```python
+def largestPathValue(colors: str, edges: List[List[int]]) -> int:
+	n = len(colors)
+	
+	adj = [[] for _ in range(n)]
+	indeg = [0 for _ in range(n)]
+
+	for e0, e1 in edges:
+		indeg[e1] += 1
+		adj[e0].append(e1)
+	
+	found = 0
+	color = [[0] * 26 for _ in range(n)]
+	queue = deque()
+
+	for i in range(n):
+		if indeg[i] == 0:
+			queue.append(i)
+		
+	while queue:
+		found += 1
+		i = queue.popleft()
+		color[i][ord(colors[i]) - ord("a")] += 1
+
+		for j in adj[i]:
+			indeg[j] -= 1
+			# 入度为0，添加进队列
+			if indeg[j] == 0:
+				queue.append(j)
+			# 可能有多条路径经过该节点，选择最大的
+			for c in range(26):
+				color[j][c] = max(color[j][c], color[i][c])
+	if found != n: return -1  # 判断环
+	ans = 0
+	for i in range(n):
+		ans = max(ans, max(color[i]))
+	return ans
+```
+
+
+该问题还可以使用dfs，自底向上
+
+```python
+def largestPathValue(colors: str, edges: List[List[int]]) -> int:
+	n = len(colors)
+	rec_stack = [False for i in range(n)]
+	visited = [False for i in range(n)]
+	adj = [[] for i in range(n)]
+	color = [[0] * 26 for i in range(n)]
+	for edge in edges:
+		adj[edge[0]].append(edge[1])
+	max_color = 0
+	def dfs(i):
+		if rec_stack[i]: return True
+		if visited[i]: return False
+		rec_stack[i] = True
+		visited[i] = True
+		for j in adj[i]:
+			if dfs(j):
+				return True
+		# 自底向上，color[i] = max(color[j], color[i])
+		for j in adj[i]:
+			for c in range(26):
+				color[i][c] = max(color[j][c], color[i][c])
+		color[i][ord(colors[i]) - ord("a")] += 1
+		
+		rec_stack[i] = False
+		return False
+	
+	for i in range(n):
+		if not visited[i]:
+			if dfs(i): return -1
+			max_color = max(max_color, max(color[i]))
+
+	return max_color
+```
+
+
+### 项目管理
+
+[1203. 项目管理 - 力扣（LeetCode）](https://leetcode.cn/problems/sort-items-by-groups-respecting-dependencies/description/)
+
+有一些项目，每个项目有对应的小组或者没有对应小组完成，一些项目有前置的项目，求出项目完成的顺序，要求同一小组的项目，排序后在列表中彼此相邻
+
+先根据项目之间的先后关系得到组之间的先后关系，建一个组的图，再根据项目之间的关系建一个项目的图。分别对组和项目进行拓扑排序，先根据项目的拓扑顺序，项目和组之间的关系得到组对应的项目，最后根据组之间的顺序得到项目的顺序。
+
+
+```python
+def sortItems(n: int, m: int, group, beforeItems) -> List[int]:
+	# 数据预处理，给没有归属于组的项目编上组号，为了避免冲突，从m开始编号
+	for i in range(len(group)):
+		if group[i] == -1:
+			group[i] = m
+			m += 1
+	
+	# 初始化组和项目的邻接表，以及入度数组
+	groupAdj = [[] for _ in range(m)]
+	itemAdj = [[] for _ in range(n)]
+	groupIndeg = [0] * m
+	itemIndeg = [0] * n
+
+	# 建图
+	for i in range(n):
+		curGroup = group[i]
+		# 遍历需要提前完成的项目
+		for j in beforeItems[i]: 
+			bg = group[j]  # 提前完成的项目所在的组
+			if bg != curGroup:
+				groupAdj[bg].append(curGroup)
+				groupIndeg[curGroup] += 1
+	
+	for i in range(n):
+		for j in beforeItems[i]:
+			itemAdj[j].append(i)
+			itemIndeg[i] += 1
+	
+	# 拓扑排序, n 为顶点的数量
+	def topoSort(adj, indeg, n):
+		res = []   # 保存排序结果
+		queue = deque()
+		for i, d in enumerate(indeg):
+			if d == 0: queue.append(i)
+		while queue:
+			i = queue.popleft()
+			res.append(i)
+			for a in adj[i]:
+				indeg[a] -= 1
+				if indeg[a] == 0:
+					queue.append(a)
+		if len(res) == n:
+			return res
+		return []
+	
+	# 获取组和项目的拓扑排序结果
+	groupList = topoSort(groupAdj, groupIndeg, m)
+	if len(groupList) == 0: return []
+	itemsList = topoSort(itemAdj, itemIndeg, n)
+	if len(itemsList) == 0: return []
+
+	# 根据项目的拓扑排序结果，项目和组的多对一关系，建立组到项目的一对多关系
+	groups2Items = defaultdict(list)
+	for item in itemsList:
+		groups2Items[group[item]].append(item)
+	
+	# 根据组的拓扑排序结果，组到项目的一对多关系，得到结果
+	res = []
+	for g in groupList:
+		items = groups2Items[g]
+		res.extend(items)
+	return res
+```
 
 
 ## 贪心算法
