--- a/人工智能.md
+++ b/人工智能.md
@@ -2223,7 +2223,7 @@ MiniMind 中包括了两种结构的模型：
 
 2. MiniMind-MoE模型，基于Llama3和[Deepseek-V2](https://arxiv.org/pdf/2405.04434)中的MixFFN混合专家模块。DeepSeek-V2在前馈网络（FFN）方面，采用了更细粒度的专家分割和共享的专家隔离技术，以提高Experts的效果。
 
-![](https://github.com/jingyaogong/minimind/raw/master/images/LLM-structure-moe.png)
+![](./images/LLM-structure-moe.png)
 
 
 ### 训练流程
