--- a/数据结构和算法.md
+++ b/数据结构和算法.md
@@ -18,6 +18,7 @@ def solve(num):
     
     if num == 0 or num == 7:
         return True
+        
     # 如果num小于10，提前中止
     if num < 10:
         return False
@@ -61,22 +62,17 @@ def isPrime(n):
 ```python
 def SieveOfEratosthenes(n):
 
-    prime = [True for i in range(n+1)]
+    prime = [True for i in range(n+1)]  # 初始时令所有数均为质数
     p = 2
-    while (p * p <= n):
+    while p * p <= n:
 
-        # If prime[p] is not changed, then it is a prime
-        if (prime[p] == True):
+        # 如果 prime[p] 为True, 证明是质数
+        if prime[p] == True:
 
-            # Update all multiples of p
+            # 更新 p * p + k * p 非质数
             for i in range(p * p, n+1, p):
                 prime[i] = False
         p += 1
-
-    # Print all prime numbers
-    for p in range(2, n+1):
-        if prime[p]:
-            print(p)
 ```
 
 
@@ -182,7 +178,7 @@ def rand10():
 ...
 2222
 
-第一轮先将每一位有2的药水全部混合起来，喂给4只小鼠。如果有一只小鼠死了，代表这一位为2，那么把所有该位为2的药水拿出来做第二轮测试，由于第二轮测试中该位全部为2，相当于回到了原来的情况，不过位数少了一位，用剩下的3只测试就够了；如果第一轮测试没有小鼠死，那么去掉所有编码包含2的瓶子，这样只剩下了01编码的，回到了二进制，用剩下的4只小鼠测试即可
+第一轮先将每一位有2的药水全部混合起来，喂给4只小鼠。如果有一只小鼠死了，代表仅有这一位为2，那么把所有仅该位为2的药水拿出来做第二轮测试，由于第二轮测试中该位全部为2，相当于回到了原来二进制的情况，不过位数少了一位，用剩下的3只测试就够了；如果第一轮测试没有小鼠死，那么去掉所有编码包含2的瓶子，这样只剩下了01编码的，回到了二进制，用剩下的4只小鼠测试即可
 
 
 2、如果死的小鼠可以替换，那么相当于有8只小鼠，这样共可以测试 $2^8$ 瓶药水。另外一种思考方式为将药水按顺序每16个混合在一起做一轮测试，这样下一轮再测试16个。
@@ -375,8 +371,7 @@ def merge(arr, lo, mid, hi, m):
 
     while i < n1 and j < n2:
       
-        # All elements in right[j..n2] are greater than left[i]
-        # So add n2 - j, in surpasser count of left[i]
+        # right[j..n2] 的所有元素都大于 left[i]，所以加上 n2-j
         if left[i] < right[j]:
             m[left[i]] += n2 - j
             arr[k] = left[i]
@@ -386,13 +381,11 @@ def merge(arr, lo, mid, hi, m):
             j += 1
         k += 1
 
-    # Copy remaining elements of left[] if any
     while i < n1:
         arr[k] = left[i]
         i += 1
         k += 1
 
-    # Copy remaining elements of right[] if any
     while j < n2:
         arr[k] = right[j]
         j += 1
@@ -402,11 +395,11 @@ def mergeSort(arr, lo, hi, m):
     if lo < hi:
         mid = lo + (hi - lo) // 2
 
-        # Sort left and right half
+        # 分组
         mergeSort(arr, lo, mid, m)
         mergeSort(arr, mid + 1, hi, m)
 
-        # Merge them
+        # 合并
         merge(arr, lo, mid, hi, m)
 
 def findSurpasser(arr):
@@ -418,8 +411,6 @@ def findSurpasser(arr):
     
     mergeSort(dup, 0, n - 1, m)
     
-    # Store surpasser counts in result array
-    # in the same order as given array
     res = [m[arr[i]] for i in range(n)]
     
     return res
@@ -440,28 +431,26 @@ for i, a in enumerate(arr):
 ### 统计数组中前k个经常出现的元素
 
 [Top K Frequent Elements in an Array - GeeksforGeeks](https://www.geeksforgeeks.org/find-k-numbers-occurrences-given-array/)
-一般做法是先统计频次，再排序
 
-一种更好的方法是先统计频次，再使用一个最大堆来存储前k个频次最大的元素
+一般做法是先统计频次，再排序。一种更好的方法是先统计频次，再使用一个最小堆来存储前k个频次最大的元素
 
 ```python
 def topKFrequent(arr, k):
 
     mp = Counter(arr)
-
     pq = []
-	# 最大堆存储前k个频次最大的元素
+	# 最小堆存储前k个频次最大的元素
     for key, value in mp.items():
         heapq.heappush(pq, (value, key))
         if len(pq) > k:
-            heapq.heappop(pq)
+            heapq.heappop(pq)  # 弹出频次最小的元素
 
     res = []
     
     while pq:
         res.append(heapq.heappop(pq)[1])
 
-    res.reverse()
+    res.reverse()   # 反转按照从小到大排
     return res
 ```
 
@@ -475,7 +464,7 @@ def topKFrequent(arr, k):
 
 使用堆实现，主要思路是维持两个堆，一个堆存储较小值，另一个堆存储较大值
 
-注意python中只给出了最小堆的实现，最大堆可以通过每次传入数据时加上负号实现。
+注意 python 中只给出了最小堆的实现，最大堆可以通过每次传入数据时加上负号实现。
 
 ```python
 import heapq
@@ -532,13 +521,13 @@ def maximumOccurredElement(L, R, n):
     arr = [0 for i in range(MAX)]
  
     # 左侧端点加1，右侧端点减1
-    for i in range(0, n, 1):
+    for i in range(n):
         arr[L[i]] += 1
         arr[R[i] + 1] -= 1
  
     # 计算前缀和，并且找到最大的前缀和
     msum = arr[0]
-    for i in range(1, MAX, 1):
+    for i in range(1, MAX):
         arr[i] += arr[i - 1]
         if (msum < arr[i]):
             msum = arr[i]
@@ -583,7 +572,8 @@ def maxProfit(prices):
 
 ```python
 class Solution:
-    
+    # 该函数和上面的函数等价，如果当前价格小于历史最低价格，就可以卖
+    # 但是如果大于历史最低价格，就需要更新历史最低价格
     def maxProfit1(self, idx, arr):
         minP = arr[idx]
         profit = 0
@@ -608,7 +598,7 @@ class Solution:
 
 这样时间复杂度过高
 
-另一种方法考虑到最多进行两次交易，因此可以分成两段，即从 0 到 i 进行一次交易，从 i 到 n-1进行一次交易
+另一种方法考虑到最多进行两次交易，因此可以分成两段，即从 0 到 i 进行一次交易，从 i 到 n-1进行一次交易。先计算 0 到 i 的交易所能获取的利润最大值，如果历史最低价格小于当前价格，那么可以选择卖或者不卖
 
 ```python
 def maxProfit(arr):
@@ -619,9 +609,10 @@ def maxProfit(arr):
 	# 计算从 0 到 i 的利润最大值
 	for i in range(1, len(arr)):
 		if minP < arr[i]:
+			# 选择卖或者不卖
 			profits[i] = max(profits[i-1], arr[i] - minP) 
 			profit = max(profit, profits[i])
-		else:
+		else: # 当前价格较低，不卖，
 			minP = arr[i]
 			profits[i] = profits[i - 1]
 	
@@ -712,9 +703,10 @@ def maxProfit(k: int, prices: List[int]) -> int:
 	n = len(prices)
 	dp = [[[0, 0] for _ in range(k+1)] for _ in range(n)]
 	for j in range(1, k+1):
-		dp[0][j][1] = -prices[0]
+		dp[0][j][1] = -prices[0]   # 第 0 天，最多 j 次交易，状态为有股票
 	for i in range(1, n):
 		for j in range(1, k+1):
+			# 第 i 天，最多 j 次交易，没股票：可以是前一天不买股票或者前一天卖股票
 			dp[i][j][0] = max(dp[i-1][j][0], dp[i-1][j][1] + prices[i])
 			dp[i][j][1] = max(dp[i-1][j][1], dp[i-1][j-1][0] - prices[i])
 	return dp[-1][k][0]
@@ -731,10 +723,8 @@ def findMaxSum(arr):
     cur_sum = 0
     max_sum = -1e5
     for i in range(n):
-        cur_sum += arr[i]
+        cur_sum = max(cur_sum+arr[i], arr[i])
         max_sum = max(max_sum, cur_sum)
-        if cur_sum < 0:
-            cur_sum = 0
     return max_sum
 ```
 
@@ -760,6 +750,28 @@ def circularSubarraySum(arr):
 ```
 
 
+本题还有另外一个变体，在环形子数组中求最大和 [918. 环形子数组的最大和 - 力扣（LeetCode）](https://leetcode.cn/problems/maximum-sum-circular-subarray/)
+
+基本思路一致，都是求一个最大和子序列和最小和子序列，总和减去最小和子序列即为跨越头尾的子序列之和的最大值，不过需要注意如果最大和子序列本身小于0（数组中所有元素全部小于0），那就不需要再去求最小和子序列了。
+
+```python
+def maxSubarraySumCircular(nums: List[int]) -> int:
+	n = len(nums)
+	fmax, fmin = nums[0], nums[0]
+	cmax, cmin = nums[0], nums[0]
+	tot = nums[0]
+	for i in range(1, n):
+		cmax = max(cmax+nums[i], nums[i])
+		cmin = min(cmin+nums[i], nums[i])
+		fmax = max(fmax, cmax)
+		fmin = min(fmin, cmin)
+		tot += nums[i]
+
+	# 如果fmax小于0，证明数组中全为负数，不需要考虑总和减去最小值了
+	if fmax < 0: return fmax
+	
+	return max(fmax, tot - fmin)
+```
 
 
 ### 直方图的最大矩形面积
@@ -823,7 +835,6 @@ def solve(arr):
     
     maxArea = 0
     for i in range(n):
-        # nowArea = arr[i]
         twidth = next[i] - prev[i] - 1
         maxArea = max(arr[i] * twidth, maxArea)
     return maxArea
@@ -846,7 +857,10 @@ for i in range(n):
 
 [31. 下一个排列 - 力扣（LeetCode）](https://leetcode.cn/problems/next-permutation/description/)
 
-基本思路是从后向前，找到第一个降序排序的元素 x，然后再从最后向后向前找到第一个比 x 大的元素 y，交换 x 和 y 之后，此时原本x对应的位置之后的元素均为降序排序，需要将其转为升序排序（用两个指针交换前后元素即可）
+找到下一个字典序的排序
+
+
+基本思路是从后向前，找到第一个降序排序的元素 x，然后再从最后向后向前找到第一个比 x 大的元素 y，交换 x 和 y 之后，此时原本 x 对应的位置之后的元素均为降序排序，需要将其转为升序排序（用两个指针交换前后元素即可）
 
 ```python
 def nextPermutation(nums: List[int]) -> None:
@@ -865,7 +879,7 @@ def nextPermutation(nums: List[int]) -> None:
 	
 	nums[i], nums[k] = nums[k], nums[i]
 
-	# i 之后的需要升序排列，注意在调换完之后，i之后是降序排序转换一下即可
+	# i 之后的需要升序排列，注意在调换完之后，i之后是降序排序交换一下即可
 	l = i + 1
 	r = n - 1
 	while l < r:
@@ -894,14 +908,16 @@ for x in nums:
 如果之前都符合，就返回 `len(nums)+1`
 
 ```python
-for x in nums:
-	while 1 <= x <= n and x != nums[x - 1]:
-		nums[x - 1], x = x, nums[x - 1]
-
-for i in range(n):
-	if nums[i] != i + 1:
-		return i  + 1
-return len(nums) + 1
+def solve(nums):
+	n = len(nums)
+	for x in nums:
+		while 1 <= x <= n and x != nums[x - 1]:
+			nums[x - 1], x = x, nums[x - 1]
+	
+	for i in range(n):
+		if nums[i] != i + 1:
+			return i + 1
+	return len(nums) + 1
 ```
 
 
@@ -976,6 +992,8 @@ def findDuplicate(nums: List[int]) -> int:
 		fast = nums[fast]
 	return fast
 ```
+
+
 
 ## 哈希问题
 
